--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "yoyo-community-videos",
   "version": "1.0.0",
-  "homepage": "https://AntoDev00.github.io/YoYo.github.io",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "axios": "^1.6.0",
